--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <title>Project</title>
 </head>
 <body>
-
+  <div class="container">
+    <div class="chats">
+      <div class="chats__flow">
+        <div class="chat__left chat">Salom yaxshimisan? Ahvollaring yaxshimi? O'qishlaring yaxshimi? Nimala qvossan? </div>
+        <div class="chat__right chat">Yaxshi rahmat :)</div>
+        <div class="chat__left chat">Nima gaplar o'qishda sessiya qachon boshlanadi?</div>
+        <div class="chat__right chat">Tinch hech gap yo'q, bilmayman!</div>
+      </div>
+    </div>
+  </div>
+  </div>
 </body>
 </html>
