--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="chats">
       <div class="chats__flow">
-        <div class="chat__left chat">Salom yaxshimisan? Ahvollaring yaxshimi? O'qishlaring yaxshimi? Nimala qvossan? </div>
+        <div class="chat__left chat">Salom yaxshimisan? Ahvollaring yaxshimi? </div>
         <div class="chat__right chat">Yaxshi rahmat :)</div>
         <div class="chat__left chat">Nima gaplar o'qishda sessiya qachon boshlanadi?</div>
         <div class="chat__right chat">Tinch hech gap yo'q, bilmayman!</div>
